Fix: script file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
+    <script defer src="script.js"></script>
+
     <title>Lilac Bank | When Banking meets Minimalist</title>
   </head>
   <body>
@@ -337,7 +340,5 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="script.js"></script>
   </body>
 </html>
